--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "express": "^4.17.2",
     "nanoid": "^3.3.1",
     "oracledb": "^5.3.0"
